# SF2529_HT25

./: .gitignore  README.md  pyproject.toml  requirements.txt
labs/: Lab1.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb
module_tests/: astra_test.py  odl_test.py
project_gustaf/: built_in_fbp_3d.ipynb  graph_animation.ipynb  plot_sloved.ipynb  test2d.ipynb  test2d2.ipynb  test3d.ipynb  vary_lambda.ipynb
