[project]
name = "sf2529-ht25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astra-toolbox>=2.3.1.post0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.3",
    "odl[testing]>=0.8.2",
    "pyqt6>=6.9.0",
    "scipy>=1.15.3",
]

